Finish static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<h1>About hubub</h1>
+<p>
+  Hubub is a social network that makes it easier to stay connected to your friends.
+</p>
